Remove packages, add favicons

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Website for Sunny Golovine" />
+    <meta
+      name="keywords"
+      content="programmer,javascript,react,js,typescript,code"
+    />
+    <meta name="robots" content="all" />
+    <meta name="googlebot" content="all" />
+    <meta name="googlebot-news" content="all" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="./images/favicon16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./images/favicon32.png" sizes="32x32">
+
     <title>Sunny Golovine</title>
   </head>
   <body>
