Build most of the page

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <link rel="icon" type="image/png" href="./images/favicon16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./images/favicon32.png" sizes="32x32">
 
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:700|Roboto+Slab:400,700&display=swap" rel="stylesheet">
     <title>Sunny Golovine</title>
   </head>
   <body>
